# ROS-Gazebo-plugin-qbmove

./: README.md
advanced_plugin/: CMakeLists.txt  package.xml
advanced_plugin/include/advanced_plugin/: advanced_motors_plugin.h  advanced_plugin.h
advanced_plugin/src/: advanced_motors_plugin.cpp  advanced_plugin.cpp
example/command_signal/: CMakeLists.txt  package.xml
example/command_signal/config/: config_signals.yaml
example/command_signal/launch/: sin.launch
example/command_signal/src/: give_sin.cpp
example/template_description/: package.xml
example/template_description/config/: advanced_config.yaml
example/template_description/launch/: multidof_template_gazebo.launch  template_gazebo.launch
example/template_description/urdf/: multidof_template.urdf  template.urdf
examples/simpleCube/simpleCube_description/: CMakeLists.txt  package.xml
plugin_manager/src/: plugin_manager.cpp
qbmove_utils/config/: default.yaml
qbmove_utils/qb_move_description/: CHANGELOG.rst  CMakeLists.txt  package.wiki  package.xml
qbmove_utils/qb_move_description/config/: default.yaml
qbmove_utils/qb_move_description/launch/: display.launch
qbmove_utils/qb_move_description/meshes/: qb_base_flange_collision.stl  qb_c_flange_collision.stl  qb_double_flat_flange_collision.stl  qb_flat_flange_collision.stl  qbmove_finger_down_collision.stl  qbmove_finger_up_collision.stl  qbmove_frame_collision.stl  qbmove_pulley_collision.stl
qbmove_utils/urdf/: qbmove.utils.xacro
sea_plugin/: CMakeLists.txt  package.xml
sea_plugin/src/: sea_plugin.cpp
(+27 files in other folders)
